--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,6 +7,10 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
+        <p>
+            Username: Deniz
+            PW: berkay2000
+        </p>
     <button type="submit">Login</button>
     </form>
 {% endblock %}
