--- a/Games/templates/game-create.html
+++ b/Games/templates/game-create.html
@@ -1,53 +1,68 @@
 {% block title %}Add game{% endblock %}
 {% block css %}
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'Games/styles.css' %}">
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'Games/styles.css' %}">
 {% endblock %}
 
 {% block logged_in_content %}
-    {#    {% if  game.user.is_authenticated %}#}
-    <h2>Add game</h2>
-    <form method="POST">
-        {% csrf_token %}
-        <!-- {{ form.as_table }} -->
-        {% comment %} {{ form.as_p }} {% endcomment %}
-        <div className="form-field">
-            <label for="{{ form.name.id}}">Name: </label>
-            {{ form.name }}
-        </div>
+{#    {% if  game.user.is_authenticated %}#}
+<h2>Add game</h2>
+<form method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+    <!-- {{ form.as_table }} -->
+    {% comment %} {{ form.as_p }} {% endcomment %}
+    <div className="form-field">
+        <label for="{{ form.name.id}}">Name: </label>
+        {{ form.name }}
+    </div>
 
-        <div className="form-field">
-            <label for="{{ form.desc.id}}">Description: </label>
-            {{ form.desc }}
-        </div>
+    <div className="form-field">
+        <label for="{{ form.desc.id}}">Description: </label>
+        {{ form.desc }}
+    </div>
 
-        <div className="form-field">
-            <label for="{{ form.genre.id}}">Genre: </label>
-            {{ form.genre }}
-        </div>
+    <div className="form-field">
+        <label for="{{ form.genre.id}}">Genre: </label>
+        {{ form.genre }}
+    </div>
 
-        <div className="form-field">
-            <label for="{{ form.age_rating.id}}">Age rating: </label>
-            {{ form.age_rating }}
-        </div>
+    <div className="form-field">
+        <label for="{{ form.age_rating.id}}">Age rating: </label>
+        {{ form.age_rating }}
+    </div>
 
-        <div className="form-field">
-            <label for="{{ form.creator.id}}">Creator: </label>
-            {{ form.creator }}
-        </div>
+    <div className="form-field">
+        <label for="{{ form.creator.id}}">Creator: </label>
+        {{ form.creator }}
+    </div>
 
-        <div className="form-field">
-            <label for="{{ form.created_at.id}}">Created at: </label>
-            {{ form.created_at }}
-        </div>
+    <div className="form-field">
+        <label for="{{ form.created_at.id}}">Created at: </label>
+        {{ form.created_at }}
+    </div>
+
+    <div className="form-field">
+        <label for="{{ form.price.id}}">Price: </label>
+        {{ form.price }}
+    </div>
+
+    {% comment %} DONT TOUCH {% endcomment %}
+    <div className="form-field">
+        <label>Image: </label>
+        {% comment %} {{form.image}} {% endcomment %}
+        <form method="post" enctype="multipart/form-data">{% csrf_token %}
+            <input id="id_image" type="file" class="" name="image">
+            <input type="submit" value="Submit" />
+        </form>
         <br>
+    </div>
+    <br>
 
-        <button type="submit">Add game</button> 
+    <button type="submit">Add game</button>
 
-    </form>
-    {#    {% else %}#}
-    {#        <p>You must log in to add games</p>#}
-    {#        <a href="{% url 'login' %}">Login</a>#}
-    {#    {% endif %}#}
+</form>
+{#    {% else %}#}
+{#        <p>You must log in to add games</p>#}
+{#        <a href="{% url 'login' %}">Login</a>#}
+{#    {% endif %}#}
 {% endblock %}
-
