--- a/templates/home.html
+++ b/templates/home.html
@@ -2,19 +2,18 @@
 
 {% block title %}Homepage Titel{% endblock %}
 {% block css %}
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'Game/styles.css' %}">
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'Game/styles.css' %}">
 {% endblock %}
 {% block content %}
-    <H1>Homepage</H1>
+<H1>Homepage</H1>
 
-    {% if user.is_authenticated %}
-        <p>Hi {{ user.username }}!</p>
-        <a href="{% url "game_list" %}">Your Games</a>
-        <a href="{% url 'logout' %}">Logout</a>
-    {% else %}
-        <p>You are not logged in</p>
-        <a href="{% url 'login' %}">Login</a>
-    {% endif %}
+{% if user.is_authenticated %}
+<p>Hi {{ user.username }}!</p>
+<a href="{% url "game-list" %}">Your Games</a>
+<a href="{% url 'logout' %}">Logout</a>
+{% else %}
+<p>You are not logged in</p>
+<a href="{% url 'login' %}">Login</a>
+{% endif %}
 {% endblock %}
-
