--- a/Games/templates/game-detail.html
+++ b/Games/templates/game-detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'Games/styles.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'Games/details.css' %}">
 
 <h2>Game detail</h2>
 
@@ -45,24 +45,34 @@
     </tr>
 </table>
 
+<div class = "comment">
+    {% for comment in all_comments %}
+        <b style="color: darkgreen">{{ comment.user.username }} on {{ comment.timestamp }}</b><br>
+
+ <div class = "comment_vote_wrapper">
+     {{ comment.text }}
+     <br><br>
+    <div class ="voting">
+        {% if comment.voted_already %}
+
+        <span style="color: grey">{{ upvotes }}</span>
+        {% endif %}
         <span style="color: darkgreen">{{ upvotes }}</span>
-        <a href="{% url 'game-vote' this_game.id 'up' %}" style="text-decoration: none">
+        <a href="{% url 'game-vote' this_game.id comment.id 'up' %}" style="text-decoration: none">
         <img src="{% static 'Games/arrow_up.png' %}" height="20" width="20">
         </a>
     &nbsp;&nbsp;&nbsp;
         <span style="color: crimson">{{ downvotes }}</span>
-        <a href="{% url 'game-vote' this_game.id 'down' %}" style="text-decoration: none">
+        <a href="{% url 'game-vote' this_game.id comment.id 'down' %}" style="text-decoration: none">
+            <p>{{ comment.id }}</p>
         <img src="{% static 'Games/arrow_down.png' %}" height="20" width="20">
         </a>
+    </div>
+    </div>
     <br><br>
-
-
-
-    {% for comment in comments_for_that_one_game %}
-        <b style="color: darkgreen">{{ comment.user.username }} on {{ comment.timestamp }}</b><br>
-        {{ comment.text }}<br><br>
     {% endfor %}
     <br>
+</div>
 
     {% if not commented_already %}
         <b style="color: crimson">Do you have a comment for this game?</b><br>
