--- a/Games/templates/game-list.html
+++ b/Games/templates/game-list.html
@@ -5,9 +5,11 @@
 <link rel="stylesheet" type="text/css" href="{% static 'Games/styles.css' %}">
 {% endblock %}
 
+
 {% block title %}Games list{% endblock %}
 
 {% block content %}
+{% include "navbar.html" %}
 <h2>Games list</h2>
 <ul>
     {% for game in all_games %}
