--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
-{% block title %}Homepage Titel{% endblock %}
-{% block css %}
-{% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
+
+{% block title %}
+Homepage Titel
 {% endblock %}
+
 {% block content %}
-{% include "navbar.html" %}
+
 
 <H1>Homepage</H1>
 
