--- a/Games/templates/game-list.html
+++ b/Games/templates/game-list.html
@@ -25,5 +25,5 @@ Games
     {% endfor %}
 </ul>
 
-<a href={% url 'game-create' %}>Add a new game</a><br>
+<a href="{% url 'game-create' %}">Add a new game</a><br>
 {% endblock %}
