--- a/Games/templates/game-detail.html
+++ b/Games/templates/game-detail.html
@@ -50,11 +50,18 @@ Games
 
 <div class="comment">
     {% for comment in all_comments %}
-    <b style="color: darkgreen">{{ comment.user.username }} on {{ comment.timestamp }}</b><br>
+    <b style="color: darkgreen">{{ comment.user.username }} on {{ comment.timestamp }}</b>
 
+    <div class="stars">
+        {% for star in all_stars %}
+        {% if star <= comment.star_rating %}
+        {#  {{ forloop.counter }}  #}
+        <img class="stars" src="{% static 'Games/star.png' %}" height="20" width="20" style="float: left;">
+        {% endif %}
+        {% endfor %}
+    </div>
     <div class="comment_vote_wrapper">
         {{ comment.text }}
-        <br><br>
         <div class="voting">
             {% if comment.voted_already %}
             <span style="color: grey">{{ comment.get_upvotes_count }}</span>
@@ -70,26 +77,24 @@ Games
                 {% endif %}
             </a>
         </div>
+        {% endfor %}
+        <br>
     </div>
-    <br><br>
-    {% endfor %}
+
+    {% if not commented_already %}
+    <b style="color: crimson">Do you have a comment at for this game?</b><br>
+    <form method="POST">
+        {% csrf_token %}
+        {{ comment_form.as_p }}
+        <button type="submit" onclick="window.location.reload()">Add comment</button>
+        {# onclick="location = self.location.href;" #}
+
+    </form>
+    {% endif %}
+
+
+    <a class="btn btn-primary" href={% url "game-delete" this_game.id %}>Delete</a>
+
     <br>
-</div>
-
-{% if not commented_already %}
-<b style="color: crimson">Do you have a comment for this game?</b><br>
-<form method="POST">
-    {% csrf_token %}
-    {{ comment_form.as_p }}
-    <button type="submit" onclick="window.location.reload()">Add comment</button>
-    {# onclick="location = self.location.href;" #}
-
-</form>
-{% endif %}
-
-
-<a class="btn btn-primary" href={% url "game-delete" this_game.id %}>Delete</a>
-
-<br>
-<a href="{% url 'game-list' %}">Back to all games</a>
-{% endblock %}
+    <a href="{% url 'game-list' %}">Back to all games</a>
+    {% endblock %}
