--- a/Games/templates/game-list.html
+++ b/Games/templates/game-list.html
@@ -26,4 +26,6 @@ Games
 </ul>
 
 <a href="{% url 'game-create' %}">Add a new game</a><br>
+<a href={% url 'game-search' %}>Search the games</a><br>
+
 {% endblock %}
