--- a/Games/templates/comment-edit.html
+++ b/Games/templates/comment-edit.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% block title %} EDIT COMMENT {% endblock %}
+
+
+<form method="POST" action="{% url 'comment-edit' comment.id %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" onclick="window.location.reload()">UPDATE</button>
+        {# onclick="location = self.location.href;" #}
+
+</form>
