--- a/Games/templates/game-detail.html
+++ b/Games/templates/game-detail.html
@@ -9,6 +9,8 @@ Games
 
 <h2>Game detail</h2>
 
+<p> USERID: {{request.user.id}} </p> 
+
 <table>
     <tr>
         <td><b>Title:</b></td>
@@ -37,6 +39,10 @@ Games
     <tr>
         <td><b>Price:</b></td>
         <td>{{ this_game.price }}<br></td>
+    </tr>   
+    <tr>
+        <td><b>Average Stars:</b></td>
+        <td>{{ average_stars }}<br></td>
     </tr>
     <tr>
         <td><b>Image:</b></td>
@@ -52,8 +58,18 @@ Games
     {% for comment in all_comments %}
     <b style="color: darkgreen">{{ comment.user.username }} on {{ comment.timestamp }}</b>
 
+    {% if not reported_already %}
+        <button><a href="{% url 'comment-report' comment.id this_game.id %}"> REPORT THIS COMMENT </a></button>
+    {% else %}
+        <p>Thank you for reporting</p>
+    {% endif %}
+
+
         {% if comment.user == request.user %}
             <button><a href="{% url 'comment-edit' comment.id %}"> EDIT MY COMMENT </a></button>
+
+            <button><a href="{% url 'comment-delete' comment.id %}"> DELETE MY COMMENT </a></button>
+
         {% endif %}
 
 
