--- a/Games/templates/game-list.html
+++ b/Games/templates/game-list.html
@@ -6,6 +6,9 @@ Games
 
 {% block content %}
 
+    <p> USERID: {{request.user.id}} {{request.user.username}} </p>
+
+
 <h2>Games list</h2>
 <ul>
     {% for game in all_games %}
@@ -16,6 +19,9 @@ Games
     <li>Genre: {{ game.get_genre_display }}
     <li>{{ game.get_desc_preview }}
     <li>{{ game.price }}
+    <li>{{ game.average_stars }} Stars
+
+
     <li>
         {% if game.image %}
         <img src="{{ game.image.url }}" height="150" width="150">
@@ -25,7 +31,10 @@ Games
     {% endfor %}
 </ul>
 
-<a href="{% url 'game-create' %}">Add a new game</a><br>
+{% if user.type == "CS" or user.type == "SU" or user.is_superuser %}
+    <a href="{% url 'game-create' %}">Add a new game</a><br>
+{% endif %}
+
 <a href={% url 'game-search' %}>Search the games</a><br>
 
 {% endblock %}
