--- a/templates/base.html
+++ b/templates/base.html
@@ -18,9 +18,15 @@
             <li><a href={% url 'game-create' %}>Game Create (Admin)</a></li>
             {% comment %} TODO: Make Admin only {% endcomment %}
             {% endif %}
-            {% if user.is_authenticated %}
-            <li><a href={% url 'all_reports' %}>Reports</a></li>
+            {% if user.is_authenticated and user.type == "CS" or user.type == "SU" %}
+                <li><a href={% url 'all_reports' %}>Reports</a></li>
             {% endif %}
+            <li>
+                <a href="{% url 'game-cart'  %}"> <img src="{% static 'shopping-cart.png' %}" id="cart-icon" height="25" width="25> </a></li>
+            <li> <p id="cart-total"> 0 </p> </li>
+            <!-- TOTAL ITEMS IN CART -->
+            
+
         </ul>
     </div>
 </head>
