--- a/templates/home.html
+++ b/templates/home.html
@@ -17,5 +17,8 @@ Homepage Titel
 {% else %}
 <p>You are not logged in</p>
 <a href="{% url 'login' %}">Login</a>
+
+<a href="{% url 'signup' %}">Register</a>
+
 {% endif %}
 {% endblock %}
