--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,4 +9,8 @@
         {{ form.as_p }}
         <button type="submit">Sign up</button>
     </form>
+
+    <a href="{% url 'login' %}">Already have an account?</a>
+
 {% endblock %}
+
