--- a/Vorlesung10_PyCharm_project/templates/base.html
+++ b/Vorlesung10_PyCharm_project/templates/base.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
-    {% block css %}{% endblock %}
+    {% block css %}
+    {%load {% static 'styles' %}%}
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+    {% endblock %}
     <title>{% block title %}Base Titel{% endblock %}</title>
 </head>
+
 <body>
     {% block header %}{% endblock %}
     {% block content %}Base Block{% endblock %}
 </body>
+
 </html>
