--- a/Games/templates/game-detail.html
+++ b/Games/templates/game-detail.html
@@ -36,7 +36,7 @@ Games
     </tr>
     <tr>
         <td><b>Price:</b></td>
-        <td>{{ this_game.price }}<br></td>
+        <td>{{ this_game.price }}€<br></td>
     </tr>
     <tr>
         <td><b>Average Stars:</b></td>
