--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,13 @@
 
     <div class="nav-bar-wrapper">
         <ul class="nav-bar">
+        {% if user.is_authenticated %}
+            {% if user.profile_picture.url %}
+                <img src="{{ user.profile.picture.url }}" alt="profile_pic">
+                {% else %}
+                <img src="{% static '/icon.png' %}" alt="profile_pic">
+            {% endif %}
+        {% endif %}
             <li><a href={% url 'home' %}>Home</a></li>
             <li><a href={% url 'game-list' %}>Games</a></li>
             {% if user.is_authenticated %}
