--- a/Games/templates/game-list.html
+++ b/Games/templates/game-list.html
@@ -22,7 +22,7 @@ Games
         <li>{{ game.average_stars }} Stars
         <li>
             {% if game.image %}
-            <img src="{{ game.image.url }}" height="150" width="150">
+            <img src="{{ game.image.url }}" height="auto" width="150">
             {#<a h ref="{{ myuser.some_file.url }}">Some uploaded file</a><br> #} <br>
             {% endif %}
         </li>
